--- a/style.css
+++ b/style.css
@@ -65,6 +65,12 @@ padding:0 2%;
 border:1px solid #ccc;
 }
 
+p {
+	font: georgia;
+	font-size: 1.5em;
+	margin: 50px;
+}
+
 
 #footer{
 text-align:center;
