--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body{
 margin:0;
 padding:0 0 0 0;
 color:#000;
-background:#0b78ff;
+background:#99ccff;
 font:normal 0.9em/150% 'Georgia', arial, verdana, sans-serif;
 text-shadow: 0 0 1px transparent; /* google font pixelation fix */
 }
