--- a/style.css
+++ b/style.css
@@ -41,6 +41,10 @@ font-family: "Arimo", arial, verdana, sans-serif;
 /*---------------------------------
 	LAYOUT
 -----------------------------------*/
+header {
+	background: white;
+}
+
 body{
 margin:0;
 padding:0 0 0 0;
