--- a/style.css
+++ b/style.css
@@ -94,54 +94,6 @@ background:#fff;
 	display:none;
 	}
 
-/* NAV BAR*/
-.navbar{
-position:fixed;
-top:0;
-left:0;
-width: 100%;
-background:#000;
-color:#fff;
-z-index:1000;
-}
-
-	.navbar #logo{
-	position:absolute;
-	top:0;
-	right:0;
-	padding:0.5em 1em;
-	font-size: 1.7em;
-	color:#efefef;
-	text-decoration:none;
-	}
-
-	.navbar span{
-	color:#86dc00;
-	}
-
-
-	.navbar ul{
-	display:inline-block;
-	margin:0;
-	padding:0;
-	}
-
-		.navbar li{
-		margin:0;
-		padding:0;
-		list-style-type:0;
-		display:inline-block;
-		}
-
-		.navbar li a{
-		display:inline-block;
-		color:#efefef;
-		padding:1em 1.3em;
-		text-decoration:none;
-		text-transform: uppercase;
-		line-height:100%;
-		font-size: 1.2em;
-		}
 
 .callout{
 background:#4598ef;/*#86dc00;*/
@@ -169,4 +121,8 @@ padding:30px 0;
 border:5px solid #ddd;
 margin:30px 0;
 display:block;
+}
+
+a:hover {
+	opacity: 0.5;
 }
