--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 margin:0;
 padding:0 0 0 0;
 color:#000;
-background:#005ce6;
+background:#1E5999;
 font:normal 0.9em/150% 'Georgia', arial, verdana, sans-serif;
 text-shadow: 0 0 1px transparent; /* google font pixelation fix */
 }
@@ -72,28 +72,8 @@ border:1px solid #ccc;
 p {
 	font: georgia;
 	font-size: 1.5em;
-	margin: 50px;
+	margin: 20px;
 }
-
-
-#footer{
-text-align:center;
-padding:20px;
-margin:0;
-border-top:1px solid #ddd;
-color:#999;
-font-size:0.8em;
-text-shadow:0px 1px 1px #fff;
-position: relative;
-top:0;
-left:0;
-background:#fff;
-}
-
-	#link-top{
-	display:none;
-	}
-
 
 .callout{
 background:#4598ef;/*#86dc00;*/
