--- a/style.css
+++ b/style.css
@@ -12,9 +12,11 @@
 /*---------------------------------
 	OVERRIDES
 -----------------------------------*/
+
+
 h1,h2,h3,h4,h5,h6{
 font-family: "Merriweather", serif;
-font-weight:normal;
+font-weight:700;
 }
 
 thead th,
