--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ body{
 margin:0;
 padding:0 0 0 0;
 color:#000;
-background:#1E5999;
+background:#FFF;
 font:normal 0.9em/150% 'Merriweather', arial, verdana, sans-serif;
 text-shadow: 0 0 1px transparent; /* google font pixelation fix */
 }
